# HAWKNET

./: CONTRIBUTING.md  LICENSE  README.md  build-sidecar.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.guidebook/: flow_libary.md  folder_struc.md  legal.md  software.build.md
data_analyzer/: cli.py  requirements.txt
data_analyzer/engines/: models.py
data_analyzer/threanet/: attack_patterns.py  collect.py  graph_weber.py
data_fetch/: go.mod  main.go
data_fetch/internal/ai/: bridge.go
data_fetch/internal/config/: config.go
data_fetch/internal/fingerprint/: http.go
data_fetch/internal/graph/: builder.go
data_fetch/internal/scanner/: dns.go  pipeline.go  port.go  subdomain.go  types.go
data_fetch/internal/types/: types.go
data_fetch/internal/vuln/: intel.go  rules.go
hkn_orchestrator/: requirements.txt
scripts/: checklist.sh  loading.sh
src/: App.css  App.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  queue.rs  sidecar.rs  types.rs  worker.rs
src/components/activitybar/: page.tsx
src/components/analyzer/: page.tsx
src/components/connection/: page.tsx
src/components/interfaces/Settings/: page.tsx
src/components/popup/: warning.tsx
src/components/ui/sidebar/: sidebar.tsx
src/components/ui/terminal/: terminal.tsx
src/components/workbox/: page.tsx
src/components/workspace/: SummaryBar.tsx  nodes.tsx  page.tsx
src/context/: AnalyzerContext.tsx
src/hooks/: useConnections.ts  useResizable.ts  useSidebar.ts
src/lib/: tauriApi.ts
