[package]
name = "hawknet"
version = "0.1.0"
description = "HAWKNET - Security Scanning Platform"
authors = ["ffoster007"]
edition = "2021"

[lib]
name = "hawknet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"

# ✅ เพิ่ม dependencies พร้อม features ที่ถูกต้อง
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }  # ✅ เพิ่ม features
anyhow = "1"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
